<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskBench</string>
    <string name="rb_tasks">tasks</string>
    <string name="rb_teams">teams</string>
    <string name="rb_messages">messages</string>
    <string name="rb_me">me</string>
    <string name="UserName">Uer Name</string>
    <string name="loginPassword">Password：</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="registerNickname">Nickname:</string>
    <string name="registerPassword">Password:</string>
    <string name="confirmPassword">ConfirmPassword:</string>
    <string name="dialog_update">UPDATE THE SCHEDULE:</string>
    <string name="task_distribute">Distribute Task</string>
    <string name="member_invite">Invite New Member</string>
    <string name="invite">Invite</string>
    <string name="taskName">Task Name</string>
    <string name="taskDescription">Task Description</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="distribute">Distribute</string>
    <string name="teamName">Team Name</string>
    <string name="teamDes">Team Description</string>
    <string name="create">create</string>

</resources>
