<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <EditText
            android:id="@+id/distribute_dialog_username"
            android:hint="@string/UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/distribute_dialog_taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/taskName"/>
        <EditText
            android:id="@+id/distribute_dialog_taskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/taskDescription"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/distribute_dialog_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/distribute_dialog_set_time_button"
            android:text="Set Start Date and Deadline"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/distribute_dialog_distributeButton"
            android:text="@string/distribute"
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/distribute_dialog_cancelButton"
            android:text="@string/cancel"
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>